--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,8 @@ html {
     "timers"
     "tags";
   gap: 1rem;
+  max-width: 1200px;
+  margin: auto;
 
   @media screen and (min-width: 600px) {
     grid-template-columns: 1fr 1fr;
